[package]
name = "dhcpm"
version = "0.1.0"
edition = "2021"
authors = ["Evan Cameron <cameron.evan@gmail.com"]
description = """
A cli for mocking DHCP messages and running rhai scripts to test DHCP servers. Aims to support v4 & v6, thought v6 is as of yet unfinished.
"""
categories = ["network-programming", "development-tools","command-line-utilities"]
repository = "https://github.com/leshow/dhcpm"
keywords = ["dhcp","dhcpv4","dhcpv6", "cli"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhcproto = "0.7.0"
anyhow = "1.0"
argh = "0.1.7"
crossbeam-channel = "0.5.1"
ctrlc = "3.1"
mac_address = "1.1.1"
tracing = "0.1"
tracing-subscriber = "0.2"
rand = "0.8"
hex = "0.4"
rhai = { version = "1.5.0", optional = true }
# rhai-rand = { version = "0.1", optional = true }

[features]
default = []
script = ["rhai"]