[package]
name = "dhcpm"
version = "0.2.3"
edition = "2021"
authors = ["Evan Cameron <cameron.evan@gmail.com"]
description = """
A cli for mocking DHCP messages and running rhai scripts to test DHCP servers. Aims to support v4 & v6, thought v6 is as of yet unfinished.
"""
categories = ["network-programming", "development-tools","command-line-utilities"]
repository = "https://github.com/leshow/dhcpm"
keywords = ["dhcp","dhcpv4","dhcpv6", "cli"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhcproto = { git = "https://github.com/bluecatengineering/dhcproto" }
anyhow = "1.0"
argh = "0.1.7"
crossbeam-channel = "0.5.1"
ctrlc = "3.1"
mac_address = "1.1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.14", features = ["env-filter","json"] }
rand = "0.8"
hex = "0.4"
rhai = { version = "1.5.0", optional = true }
socket2 = { version = "0.5", features = ["all"] }
pnet_datalink = "0.31.0"
libc = "0.2.140"
# rhai-rand = { version = "0.1", optional = true }

[features]
default = []
script = ["rhai"]